# annoycode

./: .gitignore  CMakeLists.txt  Data.py  README.md  annoycode.py  constants.py  data.json  data.p  data.py  inspect.py  inspectdata.py  inspectfile.py  trainer.py  utils.py
cmake/: deps.cmake  mac.cmake
src/: CMakeLists.txt  Constants.cpp  Constants.h  Data.cpp  Data.h  Job.cpp  Job.h  Util.cpp  Util.h  annoycode.cpp  inspect.cpp  trainer.cpp
src/trainer/: CMakeLists.txt  main.cpp
